// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Alert /> > Snapshots > should match snapshot with error type 1`] = `
<div>
  <div
    class="Frame_height__iuzg891z Modal_modalWrapper__1txblt60 react-draggable"
    style="--height__iuzg891y: 120; transform: translate(362px, 284px)translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
    >
      <div
        class="TitleBar_title__1kpzw685"
      >
        Error
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    >
      <div
        class="Alert_dialog__lcz1rw2"
      >
        <div
          class="Alert_icon__lcz1rw1"
        >
          <svg test-file-stub
            height="32"
            variant="32x32_4"
            width="32"
          />
        </div>
        <div
          class="Alert_message__lcz1rw0"
        >
          Error
        </div>
      </div>
    </div>
    <div
      class="Frame_justifyContent__iuzg891f Modal_buttonWrapper__1txblt62"
      style="--justifyContent__iuzg891e: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="OK"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> > Snapshots > should match snapshot with info type 1`] = `
<div>
  <div
    class="Frame_height__iuzg891z Modal_modalWrapper__1txblt60 react-draggable"
    style="--height__iuzg891y: 120; transform: translate(362px, 284px)translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
    >
      <div
        class="TitleBar_title__1kpzw685"
      >
        Info
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    >
      <div
        class="Alert_dialog__lcz1rw2"
      >
        <div
          class="Alert_icon__lcz1rw1"
        >
          <svg test-file-stub
            height="32"
            variant="32x32_4"
            width="32"
          />
        </div>
        <div
          class="Alert_message__lcz1rw0"
        >
          Info
        </div>
      </div>
    </div>
    <div
      class="Frame_justifyContent__iuzg891f Modal_buttonWrapper__1txblt62"
      style="--justifyContent__iuzg891e: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="OK"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> > Snapshots > should match snapshot with question type 1`] = `
<div>
  <div
    class="Frame_height__iuzg891z Modal_modalWrapper__1txblt60 react-draggable"
    style="--height__iuzg891y: 120; transform: translate(362px, 284px)translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
    >
      <div
        class="TitleBar_title__1kpzw685"
      >
        question
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    >
      <div
        class="Alert_dialog__lcz1rw2"
      >
        <div
          class="Alert_icon__lcz1rw1"
        >
          <svg test-file-stub
            height="32"
            variant="32x32_4"
            width="32"
          />
        </div>
        <div
          class="Alert_message__lcz1rw0"
        >
          question
        </div>
      </div>
    </div>
    <div
      class="Frame_justifyContent__iuzg891f Modal_buttonWrapper__1txblt62"
      style="--justifyContent__iuzg891e: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="OK"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> > Snapshots > should match snapshot with warning type 1`] = `
<div>
  <div
    class="Frame_height__iuzg891z Modal_modalWrapper__1txblt60 react-draggable"
    style="--height__iuzg891y: 120; transform: translate(362px, 284px)translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
    >
      <div
        class="TitleBar_title__1kpzw685"
      >
        Warning
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    >
      <div
        class="Alert_dialog__lcz1rw2"
      >
        <div
          class="Alert_icon__lcz1rw1"
        >
          <svg test-file-stub
            height="32"
            variant="32x32_4"
            width="32"
          />
        </div>
        <div
          class="Alert_message__lcz1rw0"
        >
          Warning
        </div>
      </div>
    </div>
    <div
      class="Frame_justifyContent__iuzg891f Modal_buttonWrapper__1txblt62"
      style="--justifyContent__iuzg891e: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="OK"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;
